--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -16,6 +16,21 @@
                 <sheet>
                     <group col="2">
                         <field name="name"/>
+                        <field name="description"/>
+                    </group>
+                    <group col="4">
+                        <field name="postcode"/>
+                        <field name="available_date"/>
+                        <field name="expected_price"/>
+                        <field name="selling_price"/>
+                        <field name="beedrooms"/>
+                        <field name="living_area"/>
+                        <field name="facades"/>
+                        <field name="garage"/>
+                        <field name="garden"/>
+                        <field name="garden_area"/>
+                        <field name="active"/>
+                        <field name="status"/>
                     </group>
                 </sheet>
             </form>
