--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -42,7 +42,7 @@
                             <field name="status"/>
                             <field name="garden_orientation"/>
                         </page>
-                    </noteboo>
+                    </notebook>
                 </sheet>
             </form>
         </field>
