--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -31,16 +31,18 @@
 
                     <notebook>
                         <page string="Description">
-                            <field name="description"/>
-                            <field name="beedrooms"/>
-                            <field name="living_area"/>
-                            <field name="facades"/>
-                            <field name="garage"/>
-                            <field name="garden"/>
-                            <field name="garden_area"/>
-                            <field name="active"/>
-                            <field name="status"/>
-                            <field name="garden_orientation"/>
+                            <group>
+                                <field name="description"/>
+                                <field name="beedrooms"/>
+                                <field name="living_area"/>
+                                <field name="facades"/>
+                                <field name="garage"/>
+                                <field name="garden"/>
+                                <field name="garden_area"/>
+                                <field name="active"/>
+                                <field name="status"/>
+                                <field name="garden_orientation"/>
+                            </group>
                         </page>
                     </notebook>
                 </sheet>
