--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -74,9 +74,8 @@
                 
                 <filter string="Available" name="filter_status" domain="[('status', 'in', ['new','offer_received'])]"/>
                 <filter string="Not active" name="filter_not_active" domain="[('active', '=', False)]"/>
-                <group expand="0" string="Group By">
-                    <filter string="Postcode" name="postcode" context="{'group_by': postcode}"/>
-                </group>
+               
+                <filter name="group_postcode" string="Postcode" context="{'group_by':'postcode'}"/>
 
                 <separator/>
 
