--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -7,6 +7,10 @@
     
     <menuitem id="menu_advertisements" name="Advertisements"
             parent="menu_real_estate" sequence="1"/>
+    <menuitem id="menu_settings" name="Settings"
+            parent="menu_real_estate" sequence="2"/>
+
+            
 
      <record id="properties_view_form" model="ir.ui.view">
         <field name="name">properties.view.form</field>
@@ -89,6 +93,49 @@
             </search>
         </field>
     </record>
+
+    <record id="estate_property_type_view_form" model="ir.ui.view">
+        <field name="name">estate.property.type.view.form</field>
+        <field name="model">estate.property.type</field>
+        <field name="arch" type="xml">
+            <form string="Properties">
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="estate_property_type_view_tree" model="ir.ui.view">
+        <field name="name">estate.property.type.view.tree</field>
+        <field name="model">estate.property.type</field>
+        <field name="arch" type="xml">
+            <tree string="Property Types">
+                <field name="name"/>
+            </tree>
+        </field>
+    </record>
+
+
+
+
+
+
+
+     <record id="property_type_action" model="ir.actions.act_window">
+        <field name="name">Property Types</field>
+        <field name="res_model">estate.property.type</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">Create your first Property Types
+            </p>
+        </field>
+    </record>    
+    <menuitem id="menu_property_types_option" name="Property Types"
+            parent="menu_settings"
+            action="property_type_action" sequence="1"/>  
     
     <record id="properties_action" model="ir.actions.act_window">
         <field name="name">Properties</field>
@@ -104,4 +151,7 @@
     <menuitem id="menu_properties_option" name="Properties"
             parent="menu_advertisements"
             action="properties_action" sequence="1"/>            
+
+
+            
 </odoo>
