--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -23,6 +23,7 @@
                     </group>
                     <group>
                         <group>
+                            <field name="property_type_id"/>
                             <field name="postcode"/>
                             <field name="available_date"/>
                         </group>
