--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -20,6 +20,7 @@
                 <sheet>
                     <group>
                         <field name="name"/>
+                        <field name="property_tag_ids" widget="many2many_tags"/>
                     </group>
                     <group>
                         <group>
