--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -30,6 +30,7 @@
                     </group>
                     <group>
                         <group>
+                            <field name="status"/>
                             <field name="property_type_id"/>
                             <field name="postcode"/>
                             <field name="available_date"/>
@@ -53,7 +54,7 @@
                                 <field name="garden"/>
                                 <field name="garden_area"/>
                                 <field name="garden_orientation"/>                                
-                                <field name="status"/>
+                                
                                 <field name="active"/>
                                 <field name="total_area"/>
                             </group>
@@ -72,10 +73,13 @@
                                         <create name="add_offer_control" string="Add a Offer"/>
                                     </control>
                                     <field name="price"/>
-                                    <field name="status"/>
                                     <field name="partner_id"/>
                                     <field name="validity"/>
                                     <field name="date_deadline"/>
+                                    <button name="action_confirm" string="Confirm" states="draft" type="object" icon="fa-check"/>
+                                    <button name="action_set_done" string="Mark as Attending" states="open" type="object" icon="fa-level-down"/>
+                                    <button name="action_cancel" string="Cancel" states="draft,open" type="object" icon="fa-times"/>
+                                    <field name="status"/>
                                 </tree>
                             </field>
                         </page>
