--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -76,9 +76,8 @@
                                     <field name="partner_id"/>
                                     <field name="validity"/>
                                     <field name="date_deadline"/>
-                                    <button name="action_confirm" string="Confirm" states="draft" type="object" icon="fa-check"/>
-                                    <button name="action_set_done" string="Mark as Attending" states="open" type="object" icon="fa-level-down"/>
-                                    <button name="action_cancel" string="Cancel" states="draft,open" type="object" icon="fa-times"/>
+                                    <button name="action_confirm" string="Accept" type="object" icon="fa-check"/>
+                                    <button name="action_cancel" string="Cancel" type="object" icon="fa-times"/>
                                     <field name="status"/>
                                 </tree>
                             </field>
