--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -179,6 +179,7 @@
                 <sheet>
                     <group>
                         <field name="name"/>
+                        <field name="color" widget="color_picker"/>
                     </group>
                 </sheet>
             </form>
@@ -191,6 +192,7 @@
         <field name="arch" type="xml">
             <tree string="Property Tags">
                 <field name="name"/>
+                <field name="color" widget="color_picker"/>
             </tree>
         </field>
     </record>
