--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -51,8 +51,8 @@
                                 <field name="facades"/>
                                 <field name="garage"/>
                                 <field name="garden"/>
-                                <field name="garden_area"/>
-                                <field name="garden_orientation"/>                                
+                                <field name="garden_area" invisible="not garden"/>
+                                <field name="garden_orientation" invisible="not garden"/>                                
                                 
                                 <field name="active"/>
                                 <field name="total_area"/>
@@ -66,8 +66,8 @@
                         </page>
                         
                         <page string="Offers">
-                            <field name="offer_ids" widget="section_and_note_one2many">
-                                <tree string="Registered Offers" editable="bottom">
+                            <field name="offer_ids" readonly="parent.status in ['offer_accepted', 'sold','cancelled']" widget="section_and_note_one2many">
+                                <tree string="Registered Offers" readonly="parent.status in ['offer_accepted', 'sold','cancelled']" editable="bottom">
                                     <control>
                                         <create name="add_offer_control" string="Add a Offer"/>
                                     </control>
@@ -75,8 +75,8 @@
                                     <field name="partner_id"/>
                                     <field name="validity"/>
                                     <field name="date_deadline"/>
-                                    <button name="action_confirm" string="" type="object" icon="fa-check"/>
-                                    <button name="action_cancel" string="" type="object" icon="fa-times"/>
+                                    <button name="action_confirm" invisible="status" string="" type="object" icon="fa-check"/>
+                                    <button name="action_cancel"  invisible="status" string="" type="object" icon="fa-times"/>
                                     <field name="status"/>
                                 </tree>
                             </field>
