--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -67,17 +67,17 @@
                         
                         <page string="Offers">
                             <field name="offer_ids" readonly="status in ['offer_accepted', 'sold','cancelled']" widget="section_and_note_one2many">
-                                <tree string="Registered Offers" readonly="status in ['offer_accepted', 'sold','cancelled']"  editable="bottom">
+                                <tree string="Registered Offers" decoration-success="status == 'accepted'" decoration-danger="status == 'refused'"  editable="bottom">
                                     <control>
                                         <create name="add_offer_control" string="Add a Offer"/>
                                     </control>
-                                    <field name="price" decoration-success="status == 'accepted'" decoration-danger="status == 'refused'"/>
-                                    <field name="partner_id" decoration-success="status == 'accepted'" decoration-danger="status == 'refused'"/>
-                                    <field name="validity" decoration-success="status == 'accepted'" decoration-danger="status == 'refused'"/>
-                                    <field name="date_deadline" decoration-success="status == 'accepted'" decoration-danger="status == 'refused'"/>
+                                    <field name="price"/>
+                                    <field name="partner_id"/>
+                                    <field name="validity"/>
+                                    <field name="date_deadline"/>
                                     <button name="action_confirm" invisible="status" string="" type="object" icon="fa-check"/>
                                     <button name="action_cancel"  invisible="status" string="" type="object" icon="fa-times"/>
-                                    <field name="status" decoration-success="status == 'accepted'" decoration-danger="status == 'refused'"/>
+                                    <field name="status"/>
                                 </tree>
                             </field>
                         </page>
