--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -67,7 +67,7 @@
                         
                         <page string="Offers">
                             <field name="offer_ids" readonly="status in ['offer_accepted', 'sold','cancelled']" widget="section_and_note_one2many">
-                                <tree string="Registered Offers" decoration-success="status == 'accepted'" decoration-danger="status == 'refused'"  editable="bottom">
+                                <tree string="Registered Offers"   editable="bottom">
                                     <control>
                                         <create name="add_offer_control" string="Add a Offer"/>
                                     </control>
