--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -77,7 +77,7 @@
                                     <field name="date_deadline"/>
                                     <button name="action_confirm" invisible="status" string="" type="object" icon="fa-check"/>
                                     <button name="action_cancel"  invisible="status" string="" type="object" icon="fa-times"/>
-                                    <field name="status"/>
+                                    <field name="status" invisible="1"/>
                                 </tree>
                             </field>
                         </page>
