--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -103,6 +103,7 @@
                 <field name="expected_price"/>
                 <field name="selling_price"/>
                 <field name="available_date" optional="hide"/>
+                <field name="status" invisible="1"/>
             </tree>
         </field>
     </record>
