--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -10,6 +10,53 @@
     <menuitem id="menu_settings" name="Settings"
             parent="menu_real_estate" sequence="2"/>
 
+
+
+
+
+        <record id="view_properties_kanban" model="ir.ui.view">
+            <field name="name">view.properties.kanban</field>
+            <field name="model">test.model</field>
+            <field name="priority" eval="100"/>
+            <field name="arch" type="xml">
+                <kanban default_group_by="property_type_id">
+                    <field name="name"/>
+                    <field name="expected_price"/>
+                    <field name="best_offer"/>
+                    <field name="tag_ids"/>
+                    <field name="selling_price"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div class="oe_kanban_global_click oe_kanban_card d-flex flex-column">
+                                <div class="oe_kanban_content flex-grow-1">
+                                    <div class="oe_kanban_details">
+                                        <strong class="o_kanban_record_title"><field name="name"/></strong>
+                                    </div>
+                                    <div class="o_kanban_record_subtitle">
+                                        <t t-if="record.expected_price">
+                                            <field name="expected_price"/>
+                                        </t>
+                                    </div>
+                                    <div>
+                                        <span class="o_text_overflow" t-if="record.best_offer.value" t-esc="record.best_offer.value"/>
+                                    </div>
+                                    <div>
+                                        <span class="o_text_overflow" t-if="record.selling_price.value" t-esc="record.selling_price.value"/>
+                                    </div>
+                                    <div>
+                                        <field name="property_tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                                    </div>
+                                   
+                                </div>
+                                <div class="clearfix"/>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
+
+
             
 
      <record id="properties_view_form" model="ir.ui.view">
@@ -283,7 +330,7 @@
     <record id="properties_action" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">test.model</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">Create your first Properties
             </p>
