--- a/estate/views/res_users_view.xml
+++ b/estate/views/res_users_view.xml
@@ -2,7 +2,7 @@
 <odoo>
 <data>
 
-    <record id="properties_view_form" model="ir.ui.view">
+    <record id="properties_users_view_form" model="ir.ui.view">
         <field name="name">res.users.view.form.inherit.properties</field>
         <field name="model">res.users</field>
         <field name="inherit_id" ref="base.view_users_form"/>
