--- a/estate/views/res_users_view.xml
+++ b/estate/views/res_users_view.xml
@@ -9,7 +9,7 @@
         <field name="arch" type="xml">
             <page name="preferences" position="after">
                 <page string="Real Estate Properties">
-                    <field name="properties_ids" widget="many2many"  domain="[('status','in', ['new','offer_received'])]">
+                    <field name="properties_ids" widget="many2many">
                         <tree string="Real Estate Properties">
                             <field name="name"/>
                             <field name="property_type_id"/>
